--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+@font-face {
+  font-family: "BDSans";
+  src: local("BeautifullyDelicious.ttf"),
+  url("./assets/fonts/BeautifullyDelicious.ttf") format("trueType");
+}
