--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,13 @@
   src: local("BeautifullyDelicious.ttf"),
   url("./assets/fonts/BeautifullyDelicious.ttf") format("trueType");
 }
+@font-face {
+  font-family: "KollektifBold";
+  src: local("Kollektif-bold.ttf"),
+  url("./assets/fonts/kollektif/Kollektif-Bold.ttf") format("trueType");
+}
+@font-face {
+  font-family: "Kollektif";
+  src: local("Kollektif.ttf"),
+  url("./assets/fonts/kollektif/Kollektif.ttf") format("trueType");
+}
